@@ -5,6 +5,7 @@ import java.util.List;
 
 import org.apache.http.NameValuePair;
 import org.apache.http.message.BasicNameValuePair;
+import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
 
@@ -24,13 +25,14 @@ public class ChatManager {
     public static final String url_join_room = url_qualifier+"joinRoom";
     public static final String url_leave_room = url_qualifier+"leaveRoom";
     public static final String url_post_message = url_qualifier+"post";
+    public static final String url_get_messages = url_qualifier+"pullRecentChat";
     
     
-    private static List<NameValuePair> rgparamsMessageInfo(Message message) {
+    private static List<NameValuePair> rgparamsMessageInfo(MessageInfo message) {
         List<NameValuePair> rgparams = new ArrayList<NameValuePair>();
-        rgparams.add(new BasicNameValuePair(RequestParameters.PARAMETER_MESSAGE_TIMESTAMP, new Long(message.dateTimestamp.getTime()).toString()));
-        rgparams.add(new BasicNameValuePair(RequestParameters.PARAMETER_MESSAGE_BODY, message.stMessage));
-        rgparams.add(new BasicNameValuePair(RequestParameters.PARAMETER_MESSAGE_SENDER, message.user.getUsername()));
+        rgparams.add(new BasicNameValuePair(RequestParameters.PARAMETER_MESSAGE_TIMESTAMP, Long.valueOf(message.getTimeStamp().getTime()).toString()));
+        rgparams.add(new BasicNameValuePair(RequestParameters.PARAMETER_MESSAGE_BODY, message.getBody()));
+        rgparams.add(new BasicNameValuePair(RequestParameters.PARAMETER_MESSAGE_SENDER, message.getSender()));
         return rgparams;
     }
     
@@ -49,29 +51,38 @@ public class ChatManager {
         return rgparams;
     }
     
-    private static RequestResultSet makeUserPostRequest(List<NameValuePair> rgparams, String url, String stSuccess,
-    		String stFailure)
-    {
+    private static RequestResultSet makePostRequest(List<NameValuePair> rgparams, String url) {
     	JSONObject json = null;
     	JSONParser jsonParser = new JSONParser();
 		json = jsonParser.makeHttpRequest(url, "POST", rgparams);
         try {
         	boolean fSucceeded = json.getString(RequestParameters.PARAMETER_SUCCESS).equals("true");
-            String stMessage = fSucceeded ? stSuccess : stFailure;
-            return new RequestResultSet(fSucceeded, stMessage);
+            return new RequestResultSet(fSucceeded, json.getString(ResponseParameters.PARAMETER_ERROR_CODE), json.getString(ResponseParameters.PARAMETER_ERROR_MSG));
         } catch (JSONException e) {
             e.printStackTrace();
         }
     	return null;
     }
     
-    private static RequestResultSet makeChatRoomPostRequest(List<NameValuePair> rgparams, String url) {
+    private static PullMessageResultSet rgmessagePostRequest(List<NameValuePair> rgparams, String url) {
     	JSONObject json = null;
     	JSONParser jsonParser = new JSONParser();
 		json = jsonParser.makeHttpRequest(url, "POST", rgparams);
         try {
         	boolean fSucceeded = json.getString(RequestParameters.PARAMETER_SUCCESS).equals("true");
-            return new RequestResultSet(fSucceeded, json.getString(RequestParameters.PARAMETER_MESSAGE_BODY));
+        	if (fSucceeded) {
+        		List<MessageInfo> rgmessageinfo = new ArrayList<MessageInfo>();
+        		JSONArray rgmessage = json.getJSONArray(RequestParameters.PARAMETER_MESSAGE_MESSAGES);
+        		for (int i = 0; i < rgmessage.length(); i++) {
+        			JSONObject jsonobject = rgmessage.getJSONObject(i);
+        			String stBody = jsonobject.getString(RequestParameters.PARAMETER_MESSAGE_BODY);
+        			long ticks = jsonobject.getLong(RequestParameters.PARAMETER_MESSAGE_TIMESTAMP);
+        			String stSender = jsonobject.getString(RequestParameters.PARAMETER_MESSAGE_SENDER);
+        			rgmessageinfo.add(new MessageInfo(stBody, stSender, ticks));
+        		}
+        		return new PullMessageResultSet(true, rgmessageinfo, "NO ERROR CODE", "NO ERROR MESSAGE");
+        	}
+            return new PullMessageResultSet(false, new ArrayList<MessageInfo>(), json.getString(ResponseParameters.PARAMETER_ERROR_CODE), json.getString(ResponseParameters.PARAMETER_ERROR_MSG));
         } catch (JSONException e) {
             e.printStackTrace();
         }
@@ -80,60 +91,61 @@ public class ChatManager {
 	
 	public static RequestResultSet authenticateUser(User user) {
         List<NameValuePair> rgparams = rgparamsUserBasicInfo(user);
-        return makeUserPostRequest(rgparams, url_authenticate, "Authenticated!", "Incorrect username/password.");
+        return makePostRequest(rgparams, url_authenticate);
 	}
 	
 	public static RequestResultSet addUser(User user) {
         List<NameValuePair> rgparams = rgparamsUserBasicInfo(user);
-        return makeUserPostRequest(rgparams, url_add_user, "User added!", "User already exists.");
+        return makePostRequest(rgparams, url_add_user);
 	}
 	
 	public static RequestResultSet removeUser(User user) {
         List<NameValuePair> rgparams = rgparamsUserBasicInfo(user);
-        return makeUserPostRequest(rgparams, url_remove_user, "User removed!", "User does not exist.");
+        return makePostRequest(rgparams, url_remove_user);
 	}
 	
 	public static RequestResultSet changePassword(User user, String stPasswordNew) {
         List<NameValuePair> rgparams = rgparamsUserBasicInfo(user);
         rgparams.add(new BasicNameValuePair(RequestParameters.PARAMETER_NEW_PWORD, stPasswordNew));
-        return makeUserPostRequest(rgparams, url_change_password, "Password changed.", "Could not change password.");
+        return makePostRequest(rgparams, url_change_password);
 	}
 	
 	public static RequestResultSet changeID(User user, String stIdNew) {
         List<NameValuePair> rgparams = rgparamsUserBasicInfo(user);
         rgparams.add(new BasicNameValuePair(RequestParameters.PARAMETER_NEW_REG_ID, stIdNew));
-        return makeUserPostRequest(rgparams, url_change_id, "ID changed.", "Could not change ID.");
+        return makePostRequest(rgparams, url_change_id);
 	}
 	
 	public static RequestResultSet addRoom(ChatRoomInfo chatroominfo) {
         List<NameValuePair> rgparams = rgparamsChatRoomBasicInfo(chatroominfo);
-		return makeChatRoomPostRequest(rgparams, url_add_room);
+		return makePostRequest(rgparams, url_add_room);
 	}
 	
 	public static RequestResultSet joinRoom(User user, ChatRoomInfo chatroominfo) {
         List<NameValuePair> rgparams = rgparamsUserBasicInfo(user);
         rgparams.addAll(rgparamsChatRoomBasicInfo(chatroominfo));
-		return makeChatRoomPostRequest(rgparams, url_join_room);
+		return makePostRequest(rgparams, url_join_room);
 	}
 	
 	public static RequestResultSet leaveRoom(User user, ChatRoomInfo chatroominfo) {
         List<NameValuePair> rgparams = rgparamsUserBasicInfo(user);
         rgparams.addAll(rgparamsChatRoomBasicInfo(chatroominfo));
-		return makeChatRoomPostRequest(rgparams, url_leave_room);
+		return makePostRequest(rgparams, url_leave_room);
 	}
 	
-	public static RequestResultSet postMessage(User user, ChatRoomInfo chatroominfo, Message message) {
+	public static RequestResultSet postMessage(User user, ChatRoomInfo chatroominfo, MessageInfo message) {
         List<NameValuePair> rgparams = rgparamsUserBasicInfo(user);
         rgparams.addAll(rgparamsChatRoomBasicInfo(chatroominfo));
         rgparams.addAll(rgparamsMessageInfo(message));
-		return makeChatRoomPostRequest(rgparams, url_post_message);
+		return makePostRequest(rgparams, url_post_message);
+	}
+	
+	public static PullMessageResultSet rgstChatLogGet(ChatRoomInfo chatroominfo) {
+        List<NameValuePair> rgparams = rgparamsChatRoomBasicInfo(chatroominfo);
+		return rgmessagePostRequest(rgparams, url_add_room);
 	}
 	
 	public static RequestResultSet unregisterDevice() {
-		return null;
-	}
-	
-	public static List<Message> rgstChatLogGet(ChatRoomInfo chatroominfo) {
 		return null;
 	}
 	
